package com.estoqueplan.estoque_plan.model.enums;

public enum StatusVenda {
    ATIVA,
    CANCELADA
}
